--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "date-fns": "^4.1.0",
     "html-to-image": "^1.11.13",
     "lucide-react": "^0.553.0",
-    "next": "16.0.3",
+    "next": "^16.1.1",
     "next-intl": "^4.6.1",
     "next-themes": "^0.4.6",
     "qr-code-styling": "^1.9.2",
